Small fixes for AIX perf memory and attach listener

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b131
    • aix

      There are a few places in attachListener_aix.cpp where the ::close system call is still handled as restartable.
      function open_sharedmem_file in perfMemory_aix.cpp would return a wrong value in case of error

            Assignee:
            Christoph Langer
            Reporter:
            Christoph Langer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: