8162869: Small fixes for AIX perf memory and attach listener

Reviewed-by: dsamersoff, dholmes